--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -40,5 +40,6 @@ section {
     padding-bottom: 1.25rem;
     padding-left: 1.25rem;
     max-width: 1240px;
+    min-height: unset;
     margin: 0 auto;
 }
