--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,10 @@
 .nav-container {
     position: relative;
     width: 100%;
-    padding: 1.25rem;
+    padding: 2.5rem 1.25rem;
+    width: -moz-available;
+    width: -webkit-fill-available;
+    width: stretch;
 }
 
 .nav {
