--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -42,4 +42,7 @@ section {
     max-width: 1240px;
     min-height: unset;
     margin: 0 auto;
+    width: -moz-available;
+    width: -webkit-fill-available;
+    width: stretch;
 }
