--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -15,10 +15,11 @@
         z-index: 1;
         user-select: none;
         cursor: pointer;
-    }
+        transition: filter 0.3s;
 
-    &:hover {
-        filter: brightness(1.2);
+        &:hover {
+            filter: brightness(1.2);
+        }
     }
 
     &-title {
@@ -33,7 +34,7 @@
         right: 0;
         width: auto;
         padding: 1rem;
-        transition: transform .3s;
+        transition: transform 0.3s;
     }
 
     .rotate {
@@ -43,17 +44,22 @@
     &-content {
         background-color: $greyKasa;
         max-height: 0;
+        opacity: 0;
         overflow: hidden;
-        transition: max-height .3s ease;
+        transform: translateY(-50%);
+        transition: max-height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
     }
 
     &-txt {
         margin: 0;
         padding: 1rem;
+        font-size: 1.2rem;
     }
 
     .active {
-        max-height: 5rem;
-        overflow: visible;
+        max-height: 500px;
+        opacity: 1;
+        transform: translateY(0);
+        transition: max-height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
     }
 }
