--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,6 +1,6 @@
 @import '../../sass/variables.scss';
 
-.logement {
+.logement-card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 3.3rem;
