--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -5,11 +5,20 @@
     margin: 0 auto;
     margin-bottom: 2.6rem;
 
+    @include mobile-breakpoint {
+        margin-bottom: 1.3rem;
+        ;
+    }
+
     &-bg {
         width: 100%;
         height: 14rem;
         object-fit: cover;
         border-radius: 25px;
+
+        @include mobile-breakpoint {
+            height: 7rem;
+        }
     }
 
     &-title {
@@ -19,11 +28,19 @@
         font-weight: 700;
         font-size: 3rem;
         text-align: center;
+        line-height: 100%;
         top: 50%;
-        transform: translate(-50%, -50%);
-        left: 50%;
-        width: 90%;
+        transform: translateY(-50%);
+        width: 100%;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
+        @include mobile-breakpoint {
+            left: 1rem;
+            font-size: 1.5rem;
+            width: 66%;
+            text-align: start;
+        }
+
     }
 
     .filter-bg {
