--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -13,6 +13,10 @@
         margin-top: 3.8rem;
         width: auto;
         height: 3.8rem;
+
+        @include mobile-breakpoint {
+            height: 2.4rem;
+        }
     }
 
     .footer-txt {
@@ -20,5 +24,13 @@
         color: $whiteKasa;
         font-weight: 500;
         font-size: 1.5rem;
+
+        @include mobile-breakpoint {
+            margin-top: 1.2rem;
+            width: 33%;
+            text-align: center;
+            height: 2.4rem;
+            font-size: 0.75rem;
+        }
     }
 }
