--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -2,11 +2,17 @@
 
 .logement-card-container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 3.3rem;
+    flex-flow: row wrap;
     background-color: $greyKasa;
     border-radius: 1.5rem;
-    padding: 3.1rem;
-    justify-content: center;
+    padding-top: 3.1rem;
+    row-gap: 3.1rem;
     justify-content: space-evenly;
+    margin: 0 auto;
+
+    @include mobile-breakpoint {
+        background-color: $whiteKasa;
+        row-gap: 1.3rem;
+        padding-top: 0;
+    }
 }
