--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -7,7 +7,6 @@
 
     @include mobile-breakpoint {
         margin-bottom: 1.3rem;
-        ;
     }
 
     &-bg {
@@ -18,6 +17,7 @@
 
         @include mobile-breakpoint {
             height: 7rem;
+            border-radius: 0.6rem;
         }
     }
 
