--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,6 +10,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include mobile-breakpoint {
+        padding: 1.25rem 1.25rem;
+    }
 }
 
 .nav {
