adding media queries for logement page + 404

--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -5,6 +5,10 @@
     height: 26rem;
     position: relative;
 
+    @include mobile-breakpoint {
+        height: 16rem;
+    }
+
     &-arrow-left {
         position: absolute;
         height: 5rem;
@@ -17,6 +21,10 @@
         &:hover {
             cursor: pointer;
             transform: translateY(-50%) scale(1.1);
+        }
+
+        @include mobile-breakpoint {
+            height: 1.2rem;
         }
     }
 
@@ -32,6 +40,10 @@
         &:hover {
             cursor: pointer;
             transform: translateY(-50%) scale(1.1);
+        }
+
+        @include mobile-breakpoint {
+            height: 1.2rem;
         }
     }
 
