--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -52,7 +52,15 @@
         border-radius: 25px;
         object-fit: cover;
         object-position: center;
+        opacity: 0;
+        transition: opacity 0.2s ease-in-out;
+
+        &.active {
+            opacity: 1;
+        }
     }
+
+
 
     &-counter {
         position: absolute;
